syntax = "proto3";

package auth;

// AuthService handles user registration, authentication, and session management.
service AuthService {
  // Register a new user.
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Log in an existing user.
  rpc Login(LoginRequest) returns (LoginResponse);

  // Refresh the access token using a refresh token.
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // Log out the current user.
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  
  // Get the current authenticated user's profile.
  rpc Me(MeRequest) returns (MeResponse);
  
  // List realms accessible to the authenticated user.
  rpc ListRealms(ListRealmsRequest) returns (ListRealmsResponse);
  
  // Create a new realm and assign the creator as admin.
  rpc CreateRealm(CreateRealmRequest) returns (CreateRealmResponse);
}

message RegisterRequest {
  string email = 1;
  string username = 2; // Added username to match accounts table
  string password = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1; // Can be email or username logic-wise, but field name implies email
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  Account account = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  string realm_id = 2; // Optional: realm ID to include in JWT token
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3; // Optional: rotate refresh token
}

message LogoutRequest {}

message LogoutResponse {
  bool success = 1;
}

message MeRequest {}

message MeResponse {
  Account account = 1;
}

message Account {
  string id = 1;
  string email = 2;
  string username = 3; // Added username
  string created_at = 4;
}

message ListRealmsRequest {}

message ListRealmsResponse {
  repeated Realm realms = 1;
}

message Realm {
  string id = 1;
  string name = 2;
  string display_name = 3;
  string description = 4; // Optional
  bool is_active = 5;
  string created_at = 6;
}

message CreateRealmRequest {
  string name = 1;
  string display_name = 2;
  string description = 3; // Optional
}

message CreateRealmResponse {
  bool success = 1;
  string message = 2;
  Realm realm = 3;
}

